--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         menikmati sajian kopi yang berkualitas
     </p>
 
-    <img src="images/aset_kopi_jumbo.png" alt="">
+    <img src="https://thumbs.dreamstime.com/b/coffe-illustration-white-background-61914260.jpg" alt="">
     
     <p class="penjelasan-about-us">
         kopi dari pertanian terpilih
